--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Lobster&family=Lobster+Two&family=Nunito:wght@500&family=Poppins:ital@0;1&family=Roboto&family=Roboto+Slab&family=Rubik&display=swap"
-      rel="stylesheet"
-    />
-    <title>Car Parts</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
